<resources>
    <string name="app_name">Försäljning</string>
    <string name="nr1">1</string>
    <string name="nr2">2</string>
    <string name="nr3">3</string>
    <string name="nr4">4</string>
    <string name="nr5">5</string>
    <string name="nr6">6</string>
    <string name="nr7">7</string>
    <string name="nr8">8</string>
    <string name="nr9">9</string>
    <string name="nr0">0</string>
    <string name="Erase">Radera</string>
    <string name="Clear">Rensa</string>
    <string name="MarginalHeader">Marginal</string>
    <string name="InpriceLabel">Inpris, kr:</string>
    <string name="MarginalLabel">Marginal, %:</string>
    <string name="OutpriceLabel">Utpris, kr:</string>
    <string name="action_bar_exitApp">Avsluta</string>

</resources>
