<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blurry_white_grey"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/salesMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/MarginalHeader"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/InpriceLabel"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/salesMargin" />

    <EditText
        android:id="@+id/inPrice"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:digits="0123456789"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toEndOf="@+id/inPriceText"
        app:layout_constraintTop_toBottomOf="@+id/salesMargin" />

    <TextView
        android:id="@+id/marginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/MarginalLabel"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/inPriceText" />

    <EditText
        android:id="@+id/margin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:digits="0123456789"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/marginText"
        app:layout_constraintStart_toStartOf="@+id/inPrice"
        app:layout_constraintTop_toBottomOf="@+id/inPriceText" />

    <TextView
        android:id="@+id/outPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/OutpriceLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/marginText" />

    <TextView
        android:id="@+id/outPrice"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/outPriceText"
        app:layout_constraintStart_toStartOf="@+id/margin"
        app:layout_constraintTop_toBottomOf="@+id/marginText" />

    <TableLayout
        android:id="@+id/allButtons"
        android:layout_width="263dp"
        android:layout_height="203dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outPriceText">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/oneBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nr1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/twoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nr2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/threeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nr3"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nr4"
                android:textSize="18sp" />

            <Button
                android:id="@+id/fiveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nr5"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sixBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nr6"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nr7"
                android:textSize="18sp" />

            <Button
                android:id="@+id/eightBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nr8"
                android:textSize="18sp" />

            <Button
                android:id="@+id/nineBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nr9"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="31dp">

            <Button
                android:id="@+id/backDelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Erase"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp" />

            <Button
                android:id="@+id/zeroBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nr0"
                android:textSize="18sp" />

            <Button
                android:id="@+id/clearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Clear"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="75dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="337dp" />

</androidx.constraintlayout.widget.ConstraintLayout>